--- a/src/html/cmd/index.html
+++ b/src/html/cmd/index.html
@@ -31,26 +31,27 @@
 			<h2>Noise Explorer Command-Line Tool</h2>
 			<p>The Noise Explorer command-line tool can parse Noise Handshake Patterns according to the original specification. It can generate cryptographic models for formal verification, including security queries, top-level processes and malicious principals, for testing against an active or passive attacker. </p>
 			<p>Noise Explorer can also render results from the ProVerif output into an elegant and easy to read HTML format: the <a href="../patterns">pattern results</a> that can be explored on this very website were generated using the Noise Explorer command-line tool.</p>
-<pre>
-$> node noiseExplorer --help
-Noise Explorer version 0.3 (specification revision 34)
-	Noise Explorer can either generate models or render results, and the parameters
-	for either must be invoked exclusively.
+			<pre>
+			$&gt; node noiseExplorer --help
+				Noise Explorer version 0.3 (specification revision 34)
+				Noise Explorer can either generate models or render results, and the parameters
+				for either must be invoked exclusively.
+				
+				Model generation:
+				--generate=(proverif|json): Specify output format.
+				--pattern=[file]: Specify input pattern file (required).
+				--attacker=(active|passive): Specify attacker type (default: active).
+				
+				Results rendering:
+				--render=(handshake|message): Render results from ProVerif output files into HTML.
+				--pattern=[file]: Specify input pattern file (required).
+				--activeModel=[file]: Specify ProVerif active attacker model (required for --render=message).
+				--activeResults=[file]: Specify active results file for --render (required).
+				--passiveResults=[file]: Specify passive results file for --render (required).
 
-	Model generation:
-	--generate=(proverif|json): Specify output format.
-	--pattern=[file]: Specify input pattern file (required).
-	--attacker=(active|passive): Specify attacker type (default: active).
-
-	Results rendering:
-	--render: Render results from ProVerif output files into HTML.
-	--pattern=[file]: Specify input pattern file (required).
-	--activeResults=[file]: Specify active results file for --render (required).
-	--passiveResults=[file]: Specify passive results file for --render (required).
-
-	Help:
-	--help: View this help text.
-</pre>
+				Help:
+				--help: View this help text.
+			</pre>
 			<h2>License</h2>
 			<p>All Noise Explorer software, including this website, is licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License, Version 3</a>.</p>
 			<h2>Download Noise Explorer for your Computer</h2>
