--- a/src/html/patterns/IK/index.html
+++ b/src/html/patterns/IK/index.html
@@ -36,24 +36,24 @@
 					<text class="tokens" x="120" y="22">s</text>
 
 				<text class="ellipsis" x="120" y="165">...</text>
-<line data-seclevel="0" x1="1" x2="248" y1="300" y2="300"></line>
-					<polyline data-seclevel="0" points="237 290 248 300 237 310"></polyline>
-					<circle data-seclevel="0" cx="17" cy="300" r="15"></circle>
+<line data-seclevel="2" x1="1" x2="248" y1="300" y2="300"></line>
+					<polyline data-seclevel="2" points="237 290 248 300 237 310"></polyline>
+					<circle data-seclevel="1" cx="17" cy="300" r="15"></circle>
 					<text class="msg" x="16" y="305">a</text>
 					<text class="tokens" x="120" y="292">e, es, s, ss</text>
-<line data-seclevel="0" x2="248" y1="435" y2="435"></line>
-					<polyline data-seclevel="0" points="10 425 1 435 10 445"></polyline>
-					<circle data-seclevel="0" cx="234" cy="435" r="15"></circle>
+<line data-seclevel="4" x2="248" y1="435" y2="435"></line>
+					<polyline data-seclevel="4" points="10 425 1 435 10 445"></polyline>
+					<circle data-seclevel="4" cx="234" cy="435" r="15"></circle>
 					<text class="msg" x="233" y="440">b</text>
 					<text class="tokens" x="120" y="427">e, ee, se</text>
-<line data-seclevel="0" x1="1" x2="248" y1="570" y2="570"></line>
-					<polyline data-seclevel="0" points="237 560 248 570 237 580"></polyline>
-					<circle data-seclevel="0" cx="17" cy="570" r="15"></circle>
+<line data-seclevel="5" x1="1" x2="248" y1="570" y2="570"></line>
+					<polyline data-seclevel="5" points="237 560 248 570 237 580"></polyline>
+					<circle data-seclevel="4" cx="17" cy="570" r="15"></circle>
 					<text class="msg" x="16" y="575">c</text>
 					<text class="tokens" x="120" y="562"></text>
-<line data-seclevel="0" x2="248" y1="705" y2="705"></line>
-					<polyline data-seclevel="0" points="10 695 1 705 10 715"></polyline>
-					<circle data-seclevel="0" cx="234" cy="705" r="15"></circle>
+<line data-seclevel="5" x2="248" y1="705" y2="705"></line>
+					<polyline data-seclevel="5" points="10 695 1 705 10 715"></polyline>
+					<circle data-seclevel="4" cx="234" cy="705" r="15"></circle>
 					<text class="msg" x="233" y="710">d</text>
 					<text class="tokens" x="120" y="697"></text>
 				</svg>
@@ -63,6 +63,18 @@
 			<h2>Handshake Pattern Analysis</h2>
 			<p>The responder is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the initiator.</p> 
 			
+
+			<h3>Message A <a href="A.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message A, sent by the initiator, benefits from <em>receiver authentication</em> but is <em>vulnerable to Key Compromise Impersonation</em>. If the responder's long-term private key has been compromised, this authentication can be forged. However, if the initiator carries out a separate session with a separate, compromised responder, this other session can be used to forge the authenticity of this message with this session's responder. Message contents benefit from <em>message secrecy</em> and some <em>forward secrecy</em>: the compromise of the responder's long-term private keys, even at a later date, will lead to message contents being decrypted by the attacker.  <span class="resultNums">1,2</span></p>
+
+			<h3>Message B <a href="B.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message B, sent by the responder, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under an active attacker: if the responder's long-term static keys were previously compromised, the later compromise of the initiator's long-term static keys can lead to message contents being decrypted by an active attacker, should that attacker also have forged the initiator's ephemeral key during the session.  <span class="resultNums">4,4</span></p>
+
+			<h3>Message C <a href="C.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message C, sent by the initiator, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the responder is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">4,5</span></p>
+
+			<h3>Message D <a href="D.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message D, sent by the responder, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the initiator is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">4,5</span></p>
 		</div>
 	</div>
 	<div class="footer">
