--- a/src/html/patterns/X1N/index.html
+++ b/src/html/patterns/X1N/index.html
@@ -26,11 +26,11 @@
 			<a href="../../cmd">Command-Line Tool</a>
 		</div>
 	</div>
-	<div class="results" style="height: 570px;">
+	<div class="results" style="height: 840px;">
 		<div class="arrowsFrame">
 			<h1 id="patternName">X1N</h1>
-			<div class="arrows" style="height: 570px;">
-				<svg id="patternArrows" style="height: 570px;">
+			<div class="arrows" style="height: 840px;">
+				<svg id="patternArrows" style="height: 840px;">
 					<line data-seclevel="0" x1="1" x2="248" y1="30" y2="30"></line>
 					<polyline data-seclevel="0" points="237 20 248 30 237 40"></polyline>
 					<circle data-seclevel="0" cx="17" cy="30" r="15"></circle>
@@ -51,10 +51,20 @@
 					<circle data-seclevel="0" cx="234" cy="435" r="15"></circle>
 					<text class="msg" x="233" y="440">d</text>
 					<text class="tokens" x="120" y="427">se</text>
+<line data-seclevel="1" x1="1" x2="248" y1="570" y2="570"></line>
+					<polyline data-seclevel="1" points="237 560 248 570 237 580"></polyline>
+					<circle data-seclevel="2" cx="17" cy="570" r="15"></circle>
+					<text class="msg" x="16" y="575">e</text>
+					<text class="tokens" x="120" y="562"></text>
+<line data-seclevel="5" x2="248" y1="705" y2="705"></line>
+					<polyline data-seclevel="5" points="10 695 1 705 10 715"></polyline>
+					<circle data-seclevel="0" cx="234" cy="705" r="15"></circle>
+					<text class="msg" x="233" y="710">f</text>
+					<text class="tokens" x="120" y="697"></text>
 				</svg>
 			</div>
 		</div>
-		<div class="resultsExplanation" style="height: 570px;">
+		<div class="resultsExplanation" style="height: 840px;">
 			<h2>Handshake Pattern Analysis</h2>
 			
 			<h3>Message A <a href="A.html" class="detailedAnalysis">show detailed analysis</a></h3>
@@ -68,6 +78,12 @@
 
 			<h3>Message D <a href="D.html" class="detailedAnalysis">show detailed analysis</a></h3>
 			<p>Message D, sent by the responder, does not benefit from <em>sender authentication</em> and does not provide <em>message integrity</em>. It could have been sent by any party, including an active attacker. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under a passive attacker: if the responder's long-term static keys were previously compromised, the later compromise of the initiator's long-term static keys can lead to message contents being decrypted by an attacker.  <span class="resultNums">0,3</span></p>
+
+			<h3>Message E <a href="E.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message E, sent by the initiator, benefits from <em>sender authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. However, if the initiator carries out a separate session with a separate, compromised responder, this other session can be used to forge the authenticity of this message with this session's responder. Message contents benefit from some <em>message secrecy</em> and some <em>forward secrecy</em>, but not sufficiently to resist any active attacker.  <span class="resultNums">2,1</span></p>
+
+			<h3>Message F <a href="F.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message F, sent by the responder, does not benefit from <em>sender authentication</em> and does not provide <em>message integrity</em>. It could have been sent by any party, including an active attacker. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the initiator is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">0,5</span></p>
 		</div>
 	</div>
 	<div class="footer">
