--- a/src/html/patterns/KXpsk2/index.html
+++ b/src/html/patterns/KXpsk2/index.html
@@ -50,19 +50,19 @@
 					<circle data-seclevel="0" cx="17" cy="410" r="15"></circle>
 					<text class="msg" x="16" y="415">a</text>
 					<text class="tokens" x="120" y="402">e</text>
-<line data-seclevel="0" x2="248" y1="600" y2="600"></line>
-					<polyline data-seclevel="0" points="10 590 1 600 10 610"></polyline>
-					<circle data-seclevel="0" cx="234" cy="600" r="15"></circle>
+<line data-seclevel="3" x2="248" y1="600" y2="600"></line>
+					<polyline data-seclevel="3" points="10 590 1 600 10 610"></polyline>
+					<circle data-seclevel="4" cx="234" cy="600" r="15"></circle>
 					<text class="msg" x="233" y="605">b</text>
 					<text class="tokens" x="120" y="592">e, ee, se, s, es, psk</text>
-<line data-seclevel="0" x1="1" x2="248" y1="790" y2="790"></line>
-					<polyline data-seclevel="0" points="237 780 248 790 237 800"></polyline>
-					<circle data-seclevel="0" cx="17" cy="790" r="15"></circle>
+<line data-seclevel="5" x1="1" x2="248" y1="790" y2="790"></line>
+					<polyline data-seclevel="5" points="237 780 248 790 237 800"></polyline>
+					<circle data-seclevel="4" cx="17" cy="790" r="15"></circle>
 					<text class="msg" x="16" y="795">c</text>
 					<text class="tokens" x="120" y="782"></text>
-<line data-seclevel="0" x2="248" y1="980" y2="980"></line>
-					<polyline data-seclevel="0" points="10 970 1 980 10 990"></polyline>
-					<circle data-seclevel="0" cx="234" cy="980" r="15"></circle>
+<line data-seclevel="5" x2="248" y1="980" y2="980"></line>
+					<polyline data-seclevel="5" points="10 970 1 980 10 990"></polyline>
+					<circle data-seclevel="4" cx="234" cy="980" r="15"></circle>
 					<text class="msg" x="233" y="985">d</text>
 					<text class="tokens" x="120" y="972"></text>
 				</svg>
@@ -72,6 +72,18 @@
 			<h2>Handshake Pattern Analysis</h2>
 			<p>The initiator is initialized with a pre-shared long-term static key, which is assumed to be pre-authenticated out of band by the responder.</p> 
 			
+
+			<h3>Message A <a href="A.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message A, sent by the initiator, does not benefit from <em>sender authentication</em> and does not provide <em>message integrity</em>. It could have been sent by any party, including an active attacker. Message contents are sent in cleartext and do not benefit from <em>message secrecy</em> and any <em>forward secrecy</em> is out of the question.  <span class="resultNums">0,0</span></p>
+
+			<h3>Message B <a href="B.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message B, sent by the responder, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>weak forward secrecy</em> under a passive attacker: if the responder's long-term static keys were previously compromised, the later compromise of the initiator's long-term static keys can lead to message contents being decrypted by an attacker.  <span class="resultNums">4,3</span></p>
+
+			<h3>Message C <a href="C.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message C, sent by the initiator, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the responder is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">4,5</span></p>
+
+			<h3>Message D <a href="D.html" class="detailedAnalysis">show detailed analysis</a></h3>
+			<p>Message D, sent by the responder, benefits from <em>sender and receiver authentication</em> and is <em>resistant to Key Compromise Impersonation</em>. Assuming the corresponding private keys are secure, this authentication cannot be forged. Message contents benefit from <em>message secrecy</em> and <em>strong forward secrecy</em>: if the ephemeral private keys are secure and the initiator is not being actively impersonated by an active attacker, message contents cannot be decrypted.  <span class="resultNums">4,5</span></p>
 			<h3>Download Cryptographic Models for Formal Verification</h3>
 			<p>
 				<a href="#" id="pvModelActiveLink">
