--- a/html/index.html
+++ b/html/index.html
@@ -115,11 +115,11 @@ IKpsk2:
 					<span class="modelType">written in rust</span>
 				</a>
 			</p>
-			<h3>Generate WASM-Friendly Secure Protocol Implementation Code</h3>
+			<h3>Generate Rust Implementation Code for WebAssembly Builds</h3>
 			<p>
 				<a href="#" id="wasmLink">
 					Get Implementation
-					<span class="modelType">written in rust</span>
+					<span class="modelType">written for wasm</span>
 				</a>
 			</p>
 		</div>
